@@ -28,7 +28,8 @@ dnsproxy.hh randombackend.cc unix_utility.cc common_startup.cc \
 utility.hh iputils.hh common_startup.hh \
 backends/bind/bindbackend.cc backends/bind/zoneparser2.cc \
 backends/bind/bindparser.cc backends/bind/bindlexer.c \
-backends/bind/huffman.cc
+backends/bind/huffman.cc backends/gsql/gsqlbackend.cc \
+backends/gsql/gsqlbackend.hh
 
 #
 pdns_server_LDFLAGS= @moduleobjects@ @modulelibs@ @DYNLINKFLAGS@ @LIBDL@ 
